static file compile changes

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,6 +9,6 @@
       {% block content %}
       <h1>Swap Block</h1>
       {% endblock %}
-    <script src="{% static 'main-bundle.js' %}"></script>
+    <script src="{% static 'js/main-bundle.js' %}"></script>
   </body>
 </html>
