added django allauth

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,12 +1,15 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<h3> test hello </h3>
-<div class='row'>
-    <div class='col-md-6'>
-    </div>
-    <div class='col-md-6'>
-        <a class='btn btn-primary btn-block' href='#'>Hello</a>
+<div class='container'>
+    <h3> Test Page </h3>
+    <div class='row'>
+        <div class='col-md-6 border p-2'>
+            Bootstrap Column 1
+        </div>
+        <div class='col-md-6 border p-2'>
+            <a class='btn btn-primary btn-block' href='#'>Hello</a>
+        </div>
     </div>
 </div>
 {% endblock %}
