--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,15 +13,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
+
+  <script src='https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js'></script>
+
   <title>Pong CRM</title>
 </head>
 
 <body class="text-blueGray-700 antialiased">
   <noscript>You need to enable JavaScript to run this app.</noscript>
 
-  <div id="root">
-    <nav
-      class="md:left-0 md:block md:fixed md:top-0 md:bottom-0 md:overflow-y-auto md:flex-row md:flex-nowrap md:overflow-hidden shadow-xl bg-white flex flex-wrap items-center justify-between relative md:w-64 z-10 py-4 px-6">
+  <div id="root" x-data="exampleApp()">
+    <nav class=" md:left-0 md:block md:fixed md:top-0 md:bottom-0 md:overflow-y-auto md:flex-row md:flex-nowrap
+    md:overflow-hidden shadow-xl bg-white flex flex-wrap items-center justify-between relative md:w-64 z-10 py-4 px-6">
       <div
         class="md:flex-col md:items-stretch md:min-h-full md:flex-nowrap px-0 flex flex-wrap items-center justify-between w-full mx-auto">
         <button
@@ -104,9 +107,10 @@
           </form>
           <ul class="md:flex-col md:min-w-full flex flex-col list-none">
             {% if user.is_authenticated %}
-            <li class="items-center">
-              <a class="text-blueGray-700 rounded bg-emerald-100 px-4 hover:text-blueGray-500 text-xs uppercase py-3 font-bold block"
-                href="#">Logged in as<br />{{ user }}
+            <li class="items-center" x-show="open">
+              <a :class="{ 'bg-pink-500': color === 'red' }" :class="{ 'bg-green-100': color === 'green' }"
+                class="text-blueGray-700 rounded px-4 hover:text-blueGray-500 text-xs uppercase py-3 font-bold block"
+                href="#" @click="toggleColor">Logged in as<br />{{ user }}
 
               </a>
             </li>
@@ -448,6 +452,7 @@
       window.myBar = new Chart(ctx, config);
     })();
   </script>
+  <script src='{% static "js/main-bundle.js" %}'></script>
 </body>
 
 </html>
